--- a/styles/index.css
+++ b/styles/index.css
@@ -20,6 +20,9 @@
 .mainContentWrapper {
   height: 100%;
   background-color: #0e191e;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 main {
@@ -28,6 +31,17 @@ main {
   justify-content: center;
   padding: 32px;
   color: white;
+}
+
+.pokemonContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 32px;
+  height: 100%;
+  width: 100%;
 }
 
 h1 {
