--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,6 @@
 .contentWrapper {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -31,6 +31,7 @@ main {
   justify-content: center;
   padding: 32px;
   color: white;
+  gap: 32px;
 }
 
 .pokemonContainer {
