--- a/styles/globalComponentStyling.css
+++ b/styles/globalComponentStyling.css
@@ -47,6 +47,7 @@ a:active {
 }
 
 .pokemonCard:hover {
+  cursor: pointer;
   transform: translateY(-5px);
   box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
 }
@@ -56,6 +57,10 @@ a:active {
   color: #333;
   margin-bottom: 0 !important;
   text-transform: capitalize;
+}
+
+.pokemonImg {
+  width: 100%;
 }
 
 .types {
