--- a/styles/globalComponentStyling.css
+++ b/styles/globalComponentStyling.css
@@ -47,7 +47,7 @@ a:active {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 12px;
+  gap: 8px;
 }
 
 .pokemonCard:hover {
@@ -78,4 +78,14 @@ a:active {
 .type-icon {
   width: 40px;
   height: auto;
+}
+
+.typeDescription {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  color: black;
+  margin: 0;
 }
