--- a/styles/globalComponentStyling.css
+++ b/styles/globalComponentStyling.css
@@ -150,6 +150,14 @@ a:active {
   width: 250px;
 }
 
+.detailedPkmInformation {
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .detailedPkmInformation > a {
   color: #000;
   margin: 0;
@@ -164,17 +172,14 @@ a:active {
   width: 100%;
   height: 300px;
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 8px;
+  padding: 16px 0px;
 }
 
-.detailedPkmInformation {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
+.informationBox > h5 {
+  margin: 0;
 }
 
 .skipButtons {
@@ -183,4 +188,8 @@ a:active {
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
+}
+
+.skipButtons > a:hover {
+  cursor: pointer;
 }
