--- a/styles/index.css
+++ b/styles/index.css
@@ -68,3 +68,20 @@ footer {
   color: white;
   margin: 0 !important;
 }
+
+#blackOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7); /* Dunkler Hintergrund */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+#blackOverlay.hidden {
+  display: none;
+}
