--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,7 @@
+body {
+  width: 100%;
+}
+
 .contentWrapper {
   width: 100%;
   min-height: 100vh;
@@ -6,6 +10,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin: 0 auto;
 }
 
 .logoWrapper {
@@ -20,6 +25,8 @@
 
 .mainContentWrapper {
   height: 100%;
+  display: flex;
+  justify-content: space-around;
 }
 
 main {
@@ -84,4 +91,29 @@ footer {
 
 #blackOverlay.hidden {
   display: none;
+}
+
+.navbar > .container-fluid {
+  max-width: 1980px;
+}
+
+.content {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  max-width: 1980px;
+  gap: 16px;
+  height: 100%;
+}
+
+.footerContent {
+  width: 100%;
+  max-width: 1980px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 auto;
 }
