--- a/styles/globalComponentStyling.css
+++ b/styles/globalComponentStyling.css
@@ -98,7 +98,7 @@ a:active {
 
 .detailedPokemonCardWrapper {
   width: 550px;
-  height: 800px;
+  height: 820px;
   background-color: #ffffff;
   color: black;
   z-index: 5;
@@ -152,7 +152,7 @@ a:active {
   margin: 0;
 }
 
-.pkmAbilities {
+.pkmDetails {
   width: 100%;
   color: #000;
   display: flex;
@@ -162,11 +162,8 @@ a:active {
   gap: 8px;
 }
 
-.pkmAbilities > p {
+.pkmDetails > p {
   font-size: 14px;
-  padding: 2px 5px;
-  border: 1px solid gray;
-  border-radius: 12px;
   margin: 0;
 }
 
@@ -187,11 +184,6 @@ a:active {
   margin: 0;
 }
 
-.informationBox > p {
-  color: #000;
-  margin: 0;
-}
-
 .informationBox {
   width: 100%;
   height: 300px;
@@ -202,7 +194,27 @@ a:active {
   padding: 16px 0px;
 }
 
+.informationBox > p {
+  color: #000;
+  margin: 0;
+}
+
 .informationBox > h5 {
+  margin: 0;
+}
+
+.baseStats {
+  width: 100%;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 8px;
+  padding: 16px 0px;
+}
+
+.baseStats > p {
+  color: #000;
   margin: 0;
 }
 
@@ -220,4 +232,14 @@ a:active {
 
 .closeButtonContainer > a:hover {
   cursor: pointer;
+}
+
+.aboutSection {
+  width: 100%;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 8px;
+  padding: 16px 0px;
 }
